--- a/silver_l10n_ve_base/views/res_partner_address_views.xml
+++ b/silver_l10n_ve_base/views/res_partner_address_views.xml
@@ -22,6 +22,7 @@
             </xpath-->
 
 
+
              <xpath expr="//field[@name='street']" position="attributes">
                 <attribute name="required">0</attribute>
             </xpath>
@@ -40,5 +41,26 @@
 
         </field>
     </record>
+
+
+    <record id="view_partner_silver_address_form1" model="ir.ui.view">
+        <field name="name">res.partner.silver.address.form.inherit1</field>
+        <field name="model">res.partner</field>
+        <field name="inherit_id" ref="l10n_ve_location.view_form_res_partner_inherited"/>
+        <field name="arch" type="xml">
+
+              <xpath expr="//field[@name='municipality']" position="attributes">
+                <attribute name="required">0</attribute>
+            </xpath>
+            <xpath expr="//field[@name='city_id']" position="attributes">
+                <attribute name="required">0</attribute>
+            </xpath>
+            <!--xpath expr="//label[@for='vat']" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </xpath-->
+        </field>
+    </record>
+
+
 </odoo>
 
