--- a/silver_network/views/silver_ip_address_views.xml
+++ b/silver_network/views/silver_ip_address_views.xml
@@ -30,6 +30,8 @@
                             <field name="cidr"/>
                             <field name="line_id"/>
                             <field  name="netdev_id" />
+                            <field name="olt_port_id" invisible="1"/>
+                            <field name="olt_id" invisible="1"/>
 
                         </group>
                         <group>
