--- a/silver_network/views/silver_olt_card_port_views.xml
+++ b/silver_network/views/silver_olt_card_port_views.xml
@@ -16,7 +16,7 @@
                     <field name="name"/>
                     <field name="num_port"/>
                     <field name="olt_card_n"/>
-                    <field name="type_access_net"/>
+                    <!--field name="type_access_net"/-->
                 </tree>
             </field>
         </record>
@@ -62,90 +62,72 @@
 
 
                         <notebook colspan="4">
-
                             <page name="ip_addresses" string="Direcciones IP">
+                                <field name="ip_address_pool_ids" nolabel="1">
+                                    <tree editable="bottom">
+                                        <field name="name" readonly="1"/>
+                                        <field name="network"/>
+                                        <field name="nmask"/>
+                                        <field name="total_ips"/>
+                                        <field name="used_ips"/>
+                                        <field name="usage_percentage" widget="progressbar"/>
+                                    </tree>
+                                </field>
+                                <field name="ip_address_ids" nolabel="1" readonly="1">
+                                    <tree>
+                                        <field name="name"/>
+                                        <field name="cidr"/>
+                                        <field name="status"/>
 
-            <field name="ip_address_pool_ids" nolabel="1"  widget="one2many_list"  >
-                <tree multi_selectable="1"  colspan="2" editable="bottom">
-                          <field name="name" readonly="True"/>
-                    <field name="network"/>
-                    <field name="nmask"/>
-
-                     <field name="total_ips"/>
-                            <field name="used_ips"/>
-                            <field name="usage_percentage" widget="progressbar"/>
-                    </tree>
-                </field>
-
-
-
- <button name="generar" string="Generar IPs" type="object"/>
-
-                <field name="ip_address_ids" nolabel="1" >
-                     </field>
-
+                                    </tree>
+                                </field>
                             </page>
-                              <page name="config" string="Configuración">
-                                          <group>
-                            <group name="capacity_port" string="Capacidad del Puerto">
-                                <field name="capacity_port_pon"/>
-                                <field name="capacity_usage_port_pon" readonly="1"/>
-                            </group>
-                            <group name="vlan_port" string="Vlan Administrativa">
-                                <field name="s_vlan"/>
-                                <field name="c_vlan"/>
-                                <field name="is_management_vlan" widget="boolean_toggle"/>
-                                <field name="is_extra_serviceport" widget="boolean_toggle"/>
-                                <field name="mgs_vlan" invisible="not is_management_vlan and not is_extra_serviceport"/>
-                                <field name="mgc_vlan" invisible="not is_management_vlan and not is_extra_serviceport"/>
-                            </group>
-
-
-                        </group>
-
-                        <group>
-                            <group name="srv_profile" string="ONT Srvprofile">
-                                <field name="is_srvprofile" widget="boolean_toggle"/>
-                                <field name="ont_srvprofile" invisible="not is_srvprofile"/>
-                            </group>
-                            <group name="ont_profile" string="ONT Lineprofile">
-                                <field name="is_line_profile" widget="boolean_toggle"/>
-                                <field name="ont_lineprofile" invisible="not is_line_profile"/>
-                            </group>
-                        </group>
-
-                        <group name="ip_address" string="Direccionamiento IP">
-                            <group>
-                                <field name="type_access_net"/>
-                            </group>
-
-                            <group>
-                                <field name="dhcp_custom_server" invisible="type_access_net != 'dhcp_leases'"/>
-                                <field name="interface" invisible="type_access_net != 'dhcp_leases'"/>
-                            </group>
-                        </group>
-                        <group name="port_net_ro_1" string="Network Router">
-                            <group>
-                                <field name="dhcp_client" widget="boolean_toggle"/>
-                                <field name="pri_onu_standar" invisible="not dhcp_client"/>
-                                <field name="pri_onu_bridge" invisible="not dhcp_client"/>
-                            </group>
-                            <group string="Custom PPPoE Profile" name="port_custom_profile">
-                                <field name="is_custom_pppoe_profile" widget="boolean_toggle"/>
-                                <field name="name_custom_pppoe_profile" invisible="not is_custom_pppoe_profile"/>
-                            </group>
-                        </group>
-                        <group name="port_radius" string="Radius">
-                            <group>
-                                <field name="realm_name"/>
-                            </group>
-                            <group>
-                                <field name="is_reverse_onuid" widget="boolean_toggle"/>
-                                <field name="number_reverse" invisible="not is_reverse_onuid"/>
-                            </group>
-                        </group>
-                              </page>
-
+                            <page name="config" string="Configuración">
+                                <group>
+                                    <group name="capacity_port" string="Capacidad del Puerto">
+                                        <field name="capacity_port_pon"/>
+                                        <field name="capacity_usage_port_pon" readonly="1"/>
+                                    </group>
+                                    <group name="vlan_port" string="Vlan Administrativa">
+                                        <field name="s_vlan"/>
+                                        <field name="c_vlan"/>
+                                        <field name="is_management_vlan" widget="boolean_toggle"/>
+                                        <field name="is_extra_serviceport" widget="boolean_toggle"/>
+                                        <field name="mgs_vlan" invisible="not is_management_vlan and not is_extra_serviceport"/>
+                                        <field name="mgc_vlan" invisible="not is_management_vlan and not is_extra_serviceport"/>
+                                    </group>
+                                </group>
+                                <group>
+                                    <group name="srv_profile" string="ONT Srvprofile">
+                                        <field name="is_srvprofile" widget="boolean_toggle"/>
+                                        <field name="ont_srvprofile" invisible="not is_srvprofile"/>
+                                    </group>
+                                    <group name="ont_profile" string="ONT Lineprofile">
+                                        <field name="is_line_profile" widget="boolean_toggle"/>
+                                        <field name="ont_lineprofile" invisible="not is_line_profile"/>
+                                    </group>
+                                </group>
+                                <group name="port_net_ro_1" string="Network Router">
+                                    <group>
+                                        <field name="dhcp_client" widget="boolean_toggle"/>
+                                        <field name="pri_onu_standar" invisible="not dhcp_client"/>
+                                        <field name="pri_onu_bridge" invisible="not dhcp_client"/>
+                                    </group>
+                                    <!--group string="Custom PPPoE Profile" name="port_custom_profile">
+                                        <field name="is_custom_pppoE_profile" widget="boolean_toggle"/>
+                                        <field name="name_custom_pppoe_profile" invisible="not is_custom_pppoe_profile"/>
+                                    </group-->
+                                </group>
+                                <group name="port_radius" string="Radius">
+                                    <group>
+                                        <field name="realm_name"/>
+                                    </group>
+                                    <group>
+                                        <field name="is_reverse_onuid" widget="boolean_toggle"/>
+                                        <field name="number_reverse" invisible="not is_reverse_onuid"/>
+                                    </group>
+                                </group>
+                            </page>
                         </notebook>
                     </sheet>
                     <div class="oe_chatter">
