--- a/silver_network/views/silver_olt_card_views.xml
+++ b/silver_network/views/silver_olt_card_views.xml
@@ -56,7 +56,7 @@
                     <field name="name"/>
                     <field name="num_port"/>
                     <field name="olt_card_n"/>
-                    <field name="type_access_net"/>
+                    <!--field name="type_access_net"/-->
                 </tree>
             </field>
                             </page>
