--- a/silver_product/views/stock_lot_views.xml
+++ b/silver_product/views/stock_lot_views.xml
@@ -22,6 +22,7 @@
                      <field name="model_name" readonly="product_id!=False"/>
                      <field name="software_version" readonly="product_id!=False"/>
                      <field name="firmware_version" readonly="product_id!=False"/>
+                     <field name="mac_address"/>
 
                         <field name="serial_number" invisible="1"/>
                  </xpath>
