--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -9,13 +9,8 @@
                 <xpath expr="//header" position="inside">
                     <!--button name="action_provision_base" string="Aprovisionar Servicio" type="object" class="oe_highlight" invisible="state_service != 'inactive'"/-->
 
+                    <button name="init_contract" type="object" class="oe_highlight"  string="Iniciar Contrato" invisible="state=='open'"/>
 
-                    <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="state_service != 'active'"/>
-                    <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service not in ['active', 'suspended'])"/>
-                    <button name="action_reconnection_service_button" type="object" class="oe_stat_button" icon="fa-rss" string="Restaurar Servicio" invisible="state_service not in ['disabled', 'suspended']"/>
-                    <!--button name="action_ping_service" type="object" class="oe_stat_button" icon="fa-feed" string="PING"/-->
-                    <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"/>
-                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"/>
                 </xpath>
 
                 <xpath expr="//field[@name='line_ids']/tree/field[@name='name']" position="before">
@@ -30,55 +25,62 @@
 
 
                 <xpath expr="//notebook" position="inside">
-                    <page name="provisioning" string="Servicio Internet">
+                    <page name="provisioning" string="Servicio Internet" invisible="state != 'open'">
                         <group>
 <field name="wan_config_successful" invisible="1"/>
                         <field name="wifi_config_successful" invisible="1"/>
-                        <field name="state_service"/>
-                        <field name="state"/>
-                             <field name="link_type" readonly="state != 'draft'"/>
-                          <field name="node_id" readonly="state != 'draft'"/>
-                                        <field name="box_id" readonly="state != 'draft'" invisible="link_type not in ['fiber', 'fttb']"/>
-                                        <field name="ap_id" readonly="state != 'draft'" invisible="link_type != 'wifi'"/>
+                        <field name="state_service" invisible="1"/>
+                        <field name="state"  invisible="1"/>
+                             <field name="link_type" readonly="state_service == 'active'"/>
+                          <field name="node_id" readonly="state_service == 'active'"/>
+                                        <field name="box_id" readonly="state_service == 'active'" invisible="link_type not in ['fiber', 'fttb']" domain="[('node_id', '=', node_id)]"/>
+                                        <field name="ap_id" readonly="state_service == 'active'" invisible="link_type != 'wifi'"/>
 
                         </group>
    <group>
                                 <group name="ips_networks_2" string="Datos Red Externa Asignada" invisible="link_type == 'lan'">
 
 
-                                        <field name="olt_id" readonly="state != 'draft'"
-
+                                        <field name="olt_id" readonly="state_service == 'active'"
+domain="[('node_id', '=', node_id)]"
                                                invisible="(link_type not in ['fiber', 'fttb']) " options="{'no_create': True}"/>
                                         <button name="action_open_onu_selector_wizard"
                                                 type="object"
                                                 string="Descubrir ONUS"
                                                 class="oe_highlight"
-                                                invisible="(not olt_id) or (state != 'draft')"/>
+                                                invisible="(not olt_id) or (state_service == 'active')"/>
                                         <field name="discovered_onu_id"
                                                domain="[('olt_id', '=', olt_id)]"
-                                               invisible="(not olt_id) or (state != 'draft')" nolabel="1" />
-                        <field name="olt_port_id" />
+                                               invisible="(not olt_id) or (state_service == 'active')" nolabel="1" />
+                        <field name="olt_port_id" domain="[('olt_id', '=', olt_id)]"/>
                         <field name="onu_pon_id" />
    <field name="vlan_id"/>
- <field name="ip_address"/>
-                                        <field name="mac_address_onu"/>
+
+                                         <field name="ip_address_id"/>
+
 
                                     <button name="action_provision_base"
                                                 type="object"
                                                 string="Aprovisionar Servicio"
                                                 class="oe_highlight"
-                                                invisible="(not olt_id) or (state == 'draft' )"/>
+                                                invisible="(not olt_id) or(state != 'open') or (state_service != 'inactive') "/>
 
                                     <button name="action_check_olt_state"
                                                 type="object"
                                                 string="Comprobar conexión"
                                                 class="oe_highlight"
-                                                invisible="(state != 'draft')"/>
+                                                invisible="(state != 'open') or (state_service != 'active')"/>
                                         <field name="olt_state"  nolabel="1"
-                                               widget="badge"
+                                               widget="badge"  invisible="(state != 'open') or (state_service != 'active')"
                            decoration-success="olt_state in ['active', 'connected']"
                            decoration-warning="olt_state in ('suspended', 'disabled')"
                            decoration-danger="olt_state in ['removed', 'down']"/>
+
+                                                        <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service != 'active')"/>
+                    <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state != 'open') or (state_service not in ['suspended'])"/>
+                    <button name="action_reconnection_service_button" type="object" class="oe_highlight" string="Restaurar Servicio" invisible="(state != 'open') or ( state_service not in ['terminated', 'suspended']) "/>
+
+
                                     </group>
          <group string="Equipo">
                                         <field name="stock_lot_id"/>
@@ -86,8 +88,13 @@
                     <field name="model_name"/>
                     <field name="software_version"/>
                     <field name="firmware_version"/>
+                <field name="mac_address_onu"/>
 
-                                        <field name="is_bridge" readonly="state != 'draft'"/>
+                                        <field name="is_bridge" readonly="state_service == 'active'"/>
+
+                                 <button name="action_contract_reboot_onu" type="object" class="oe_stat_button" icon="fa-refresh" string="Reiniciar ONU"  invisible="(state != 'open') or ( state_service not in ['active']) "/> />
+                    <button name="action_change_ont_service" type="object" class="oe_stat_button" icon="fa-exchange" string="Cambiar ONU"  invisible="(state != 'open') or ( state_service not in ['active']) "/>/>
+
                                     </group>
                                     <!--group  invisible="link_type not in ['fiber', 'fttb']">
                                         <div class="o_row" >
@@ -106,7 +113,9 @@
 
                                     <group string="Datos Asignados">
 
-                                        <field name="core_id" readonly="state != 'draft'" options="{'no_create': True}"/>
+                                        <field name="core_id" readonly="(state_service == 'active') and (radius_state == 'active') and (core_state == 'active') " options="{'no_create': True}"
+                                        domain="[('node_id', '=', node_id)]"
+                                        />
 
                                         <field name="pppoe_user"/>
                                         <field name="pppoe_password" password="True"/>
@@ -130,6 +139,9 @@
                            decoration-success="core_state in ['active', 'connected']"
                            decoration-warning="core_state in ('suspended', 'disabled')"
                            decoration-danger="core_state in ['removed', 'down']"  nolabel="1" />
+
+
+
                                     </group>
 
                                      <group string="Credenciales WiFi">
@@ -149,10 +161,11 @@
                                         <field name="encrypt_type" invisible="1"/-->
                                     </tree>
                                 </field>
-
-  <button name="action_provision_wan" string="Configurar WAN" type="object" class="oe_highlight" invisible="not olt_id.is_gestion_pppoe or (state_service == 'inactive')"/>
+<field name="state_service"/>
+                                         <field name="olt_state"/>
+  <button name="action_provision_wan" string="Configurar WAN" type="object" class="oe_highlight" invisible="(state_service == 'inactive') or (olt_state != 'active')"/>
 <button name="button_get_wan_info" type="object" string="Info"/>
-                    <button name="action_provision_wifi" string="Aplicar WiFi" type="object" class="oe_highlight" invisible=" (state_service == 'inactive')"/>
+                    <button name="action_provision_wifi" string="Aplicar WiFi" type="object" class="oe_highlight" invisible=" (state_service == 'inactive') or (olt_state != 'active')"/>
 <button name="button_get_wifi_info" type="object" string="Wifi"/>
                             </group>
                                 </group>
