--- a/silver_contract/views/silver_plan_type_views.xml
+++ b/silver_contract/views/silver_plan_type_views.xml
@@ -8,6 +8,7 @@
                 <tree>
                     <field name="name"/>
                     <field name="code"/>
+                    <field name="service_type_id"/>
                     <field name="description"/>
                 </tree>
             </field>
@@ -23,6 +24,7 @@
                         <group>
                             <field name="name"/>
                             <field name="code"/>
+                            <field name="service_type_id"/>
                             <field name="description"/>
                         </group>
                     </sheet>
